[package]
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
name = "cargo-modify"
version = "0.3.0"
resolver = "2"
description = "allows changes to the cargo toml via cmd line"
license-file = "LICENSE" 
homepage = "https://github.com/extrawurst/cargo-modify"
repository = "https://github.com/extrawurst/cargo-modify"

[dependencies]
toml = "0.5"
pico-args = "0.4"